Fix overflow issue

--- a/src/components/DeckManager/DeckManager.module.css
+++ b/src/components/DeckManager/DeckManager.module.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-    position: absolute;
     justify-content: left;
     width: 70%;
     background-color: rgb(0, 0, 0, 0.1);
     box-shadow: inset 0px 0px 10px rgb(0, 0, 0, 0.25);
     border-radius: 15px;
+    overflow: auto;
 }
 
 .gridItem {
